# pypdm

./: LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
docs/: Makefile  api.rst  conf.py  getting_started.rst  index.rst  license.rst
pypdm/: __init__.py  pdm.py
tests/: conftest.py  test_limits.py  test_link.py  test_pdm_basic.py  test_pdm_control_mode.py  test_real.py
