[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypdm"
version = "1.2"
description = "Python3 library for controlling Alphanov's PDM laser sources."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "COPYING.LESSER" }
authors = [
  { name = "Olivier Heriveaux" }
]
dependencies = [
  "pyserial"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Ledger-Donjon/pypdm"
Repository = "https://github.com/Ledger-Donjon/pypdm"
Documentation = "https://pypdm.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["pypdm*"]

